# OpenGL-Skyboxes-and-Photoshop-tutorial

./: 6.1.cubemaps.fs  6.1.cubemaps.vs  6.1.skybox.fs  6.1.skybox.vs  CITATION.cff  Objects.cpp  Objects.h  README.md  REFERENCES.md  Source.cpp  build_windows.sh  camera.h  filesystem.h  lightbox.vs  lightgreen.fs  post_processing.fs  post_processing.vs  purple.fs  root_directory.h  shader.h  text.fs  text.vs  videorefs.md
Clouds/: references.txt
Cross Platform App/: CMakeLists.txt  glad.c
Cross Platform App/src/sa/app/: TextShader.fs  TextShader.vs  app.cpp  camera.h  flower_leaf.h  flower_stem.h  flower_upper.h  glsl.vs  input.h  light_green.fs  light_pink.fs  light_purple.fs  lightbox.fs  mesh.h  model.h  objects.cpp  objects.h  pen_accent.h  pen_body.h  pen_clip.h  pen_point.h  shader.h  skybox.vs  specular.fs  specular.vs  sphere.h  stb_image.h  texture.cpp  texture.h
Loft/: references.txt
Skyboxes/dark/: references.txt
Skyboxes/icebergs/: references.txt
